Updates the dev branch from master (#83)
* fix build

* Re-add valuesetoperation provider

* Disable lucene by default

* Re-add valueset operation provider

* adding smoke test files

* adding base documentation

* wip

* Update src/test/smoketest/SMOKE_TEST.md

Co-authored-by: Ken Stevens <khstevens@gmail.com>

* Update src/test/smoketest/SMOKE_TEST.md

Co-authored-by: Ken Stevens <khstevens@gmail.com>

* Update src/test/smoketest/SMOKE_TEST.md

Co-authored-by: Ken Stevens <khstevens@gmail.com>

* bumping to non-snapshot version (#377)

* updated helm chart to use latest v6.0.1 version of the image (#382)

* updated helm chart to use latest v6.0.1 version of the image

* updated workflow to run against multiple k8s versions

* add BinaryAccessProvider to BaseJpaRestfulServer

* Update src/main/java/ca/uhn/fhir/jpa/starter/BaseJpaRestfulServer.java

Co-authored-by: Kevin Dougan SmileCDR <72025369+KevinDougan-SmileCDR@users.noreply.github.com>

* Applying fix from upstream for h2 Binaries

This issue is already fixed upstream. Can be removed with next hapi version upgrade.
https://github.com/hapifhir/hapi-fhir/pull/3676

* removed wrong and duplicated config entry

`daoconfig_client_id_strategy`does not resolve and is a duplicate of `client_id_strategy`

* Added OpenTelemetry Java Agent JAR to container image (#391)

Closes #387

* changes to pom.xml to enable publishing

* fixed directory of the .war in tomcat-based image

* bulk data instrumentation included

* bulk data instrumentation turned off by default

* updated opentelemetry-java-instrumentation JAR to 1.16.0

* Better support for ARM

java17 regular doesn't have ARM, java17-debian11 does

* Updated Otel Java agent to 1.17.0

* Updated hapi-fhir to 6.1.0

* Minor Helm chart dependency updates and security improvements

* Don't run maven CI on changes to the helm chart

* updated helm chart to use version 6.1.0 of the image

* adde